- Added "-showCoverage <wrl file name>" option to CalcLasRange to create
  a scene graph showing the names and bounding boxes of all LAS files
  given on the command line.
- Added LidarSpotRemover utility.

LiDAR Viewer 2.12:
- Bumped Vrui version requirement to 3.0-001.

LiDAR Viewer 2.13:
- Added "Environment" tab to render dialog to control background color
  and draw distance dynamically.
- Bumped Vrui requirement to 4.2-006 and fixed some incompatibilities.

LiDAR Viewer 2.14:
- Bumped Vrui requirement to 5.0-001.
- Fixed bug in Element::hasListProperty method in ReadPlyFile.cpp.

LiDAR Viewer 2.15:
- Bumped Vrui version requirement to Vrui-7.0-001
- Added support for Vrui collaboration infrastructure, version 4.1

LiDAR Viewer 2.16:
- Bumped Vrui version requirement to Vrui-8.0-001
- Adapted to new Vrui build system
- Added support for Vrui collaboration infrastructure, version 5.0

LiDAR Viewer 2.17:
- Bumped Vrui version requirement to Vrui-10.2-002
- Bumped Vrui collaboration infrastructure version requirement to 8.0
- Adapted to API changes in collaboration infrastructure
- Replaced deprecated type shortcuts in LidarPreprocessor.cpp with new
  standard shortcuts.
- Simplified menu creation code in LidarViewer.cpp.

LiDAR Viewer 2.18:
- Bumped Vrui version requirement to Vrui-12.0-001
- Bumped Vrui collaboration infrastructure version requirement to 10.0
- Added option to load color data from additional color files to
  LidarProcessOctree.
- Added option to read additional color file to LidarExporter.
- Fixed request code for Koinonia plug-in in LidarViewer.
- Adapted to API changes in Vrui.

LiDAR Viewer 2.18:
- Added gamma correction of point colors to PointBasedLightingShader.

LiDAR Viewer 2.20:
- Bumped Vrui version requirement to Vrui-12.3-001
- Bumped Vrui collaboration infrastructure version requirement to 10.2
- Adapted to Vrui's new project build system

LiDAR Viewer 2.21:
- Use Vrui's central scene graph to manage additional scene graphs.