@@ -38,7 +38,7 @@ rates.
 Requirements
 ============
 
-LiDAR Viewer requires Vrui version 13.0 build 001 or newer.
+LiDAR Viewer requires Vrui version 13.1 build 001 or newer.
 To work collaboratively, LiDAR Viewer requires the Vrui Collaboration
 Infrastructure, version 10.2 or newer.
 
@@ -71,7 +71,7 @@ accounts.
 2. Change into LiDAR Viewer base directory:
    > cd LidarViewer-<version>
 
-3. If the Vrui version installed in step 0 was not 13.0, or Vrui's
+3. If the Vrui version installed in step 0 was not 13.1, or Vrui's
    installation directory was changed from the default of /usr/local,
    adapt the makefile using a text editor. Change the value of
    VRUI_MAKEDIR close to the beginning of the file as follows:
