@@ -203,3 +203,6 @@ LiDAR Viewer 2.20:
 
 LiDAR Viewer 2.21:
 - Use Vrui's central scene graph to manage additional scene graphs.
+- Use new SceneGraph::SceneGraphList class to manage additional scene
+  graphs
+- Bumped Vrui version requirement to Vrui-13.1-001
